Some basic styles and structures added.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,6 @@
 @import 'reset';
 @import 'base';
+@import 'pages/header';
+@import 'pages/main';
+@import 'pages/article';
+@import 'pages/footer';
