--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import 'reset';
 @import 'base';
+@import 'pages/container';
 @import 'pages/header';
 @import 'pages/main';
 @import 'pages/article';
