--- a/src/styles/pages/_footer.scss
+++ b/src/styles/pages/_footer.scss
@@ -1,10 +1,10 @@
 .p-footer {
   height: 200px;
   text-align: center;
-  margin-top: 1.45rem;
   box-shadow: 0 0 20px rgba(0,0,0,.05);
   background: #5B524C;
   color: #F4F4F5;
+  margin-top: auto;
 
   &__content {
     position: relative;
