--- a/src/styles/pages/_footer.scss
+++ b/src/styles/pages/_footer.scss
@@ -2,9 +2,13 @@
   height: 200px;
   text-align: center;
   box-shadow: 0 0 20px rgba(0,0,0,.05);
-  background: #5B524C;
-  color: #F4F4F5;
+  background: #ffa64d;
+  color: #333333;
   margin-top: auto;
+
+  ::selection {
+    background: #333333;
+  }
 
   &__content {
     position: relative;
