--- a/src/styles/pages/_header.scss
+++ b/src/styles/pages/_header.scss
@@ -1,6 +1,7 @@
 .p-header {
   margin-bottom: 1.45rem;
   box-shadow: 0 0 20px rgba(0,0,0,.05);
+  height: 60px;
 
   &__content {
     margin: 0 auto;
