--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import 'reset';
+@import 'mixins/selection';
 @import 'base';
 @import 'pages/container';
 @import 'pages/header';
 @import 'pages/main';
 @import 'pages/article';
 @import 'pages/footer';
+@import 'components/links';
