--- a/src/styles/pages/_article.scss
+++ b/src/styles/pages/_article.scss
@@ -11,11 +11,33 @@ $padding-paragraph: 10px;
     margin-bottom: .8rem;
     padding-bottom: 0;
 
+    &-category {
+      font-size: 1rem;
+      margin-bottom: 1.2rem;
+
+      @include selection-dark;
+    }
+
     &-from-author {
       margin-bottom: 1.2rem;
-      font-size: 1.2rem;
-      text-decoration: underline;
+      font-size: 1rem;
     }
+  }
+
+  &__author {
+    background: #ffbf80;
+    padding: 4px;
+    text-decoration: underline;
+
+    //@include selection-dark;
+  }
+
+  &__category {
+    padding: 4px;
+    margin-bottom: 1.2rem;
+    font-size: 1rem;
+    background: #404040;
+    color: #ffffff;
   }
 
   &__date {
