SEO changes. Favicon added. Refactoring.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,4 +6,6 @@
 @import 'pages/main';
 @import 'pages/article';
 @import 'pages/footer';
+@import 'pages/not-found';
+@import 'pages/contact';
 @import 'components/links';
