--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,8 +4,10 @@
 @import 'pages/container';
 @import 'pages/header';
 @import 'pages/main';
-@import 'pages/article';
+@import 'pages/author';
+@import 'pages/category';
 @import 'pages/footer';
 @import 'pages/not-found';
 @import 'pages/contact';
 @import 'components/links';
+@import 'components/article';
